--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actaeon = "0.2.1"
+sodiumoxide = "0.2.7"
+lazy_static="1.4.0"
